# SubCortexMesh

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: modules.rst  requirements.txt
docs/source/: conf.py  index.rst  merge_all.rst  merge_tools.rst  mesh_metrics.rst  modules.rst  slm_analysis.rst  slm_plot.rst  stat_tools.rst  subcortexmesh.rst  subseg_getvol.rst  surf_qcplot.rst  template_data_fetch.rst  vol2surf.rst
subcortexmesh/: __init__.py  aseg_getvol.py  fslfirst_getsurf.py  merge_all.py  merge_tools.py  mesh_metrics.py  stat_tools.py  subseg_getvol.py  surf_qcplot.py  template_data_fetch.py  vol2surf.py
