[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "subcortexmesh"
description = "A toolbox for automated conversion of subcortical segmentation volumes to surface meshes, computation of vertex-wise metrics and surface-based analysis"
keywords = ["subcortices", "subcortical", "surface", "mesh", "vertex", "brain", "imaging", "structural"]
version = "1.0.0"
dependencies = [
  "antspyx>=0.6.2",
  "pyvista>=0.46.4",
  "vtk>=9.5.2",
  "brainstat>=0.4.2",
  "nibabel>=5.3.2",
  "scipy>=1.15.2",
  "scikit-learn>=1.7.2"
]
requires-python = ">=3.10"
authors = [
  {name = "Charly H. A. Billaud", email = "charly.billaud@ntu.edu.sg"},
  {name = "Junhong Yu", email = "junhong.yu@ntu.edu.sg"}
]
maintainers = [
  {name = "Charly H. A. Billaud", email = "charly.billaud@ntu.edu.sg"}
]

readme = "README.md"
license = "GPL-3.0-or-later"

[project.urls]
Repository = "https://github.com/chabld/SubCortexMesh"
Documentation = "https://subcortexmesh.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["."]
include = ["subcortexmesh*"]   # only grabs subcortexmesh/, nothing else

[tool.setuptools.package-data]
subcortexmesh = []             # no extra data files needed